@@ -1,0 +1,2 @@
+[TYPECHECK]
+signature-mutators=functional.arguments.mutation_decorator
