@@ -109,6 +109,11 @@ Release date: TBA
 
   Close #2877
 
+* Can choose to ignore `too-many-function-args`, `unexpected-keyword-arg`,
+  and `no-value-for-parameter` for functions decorated with certain decorators.
+
+  Close #259
+
 
 What's New in Pylint 2.3.0?
 ===========================
